<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <!-- Add Icons for the other Actions -->
    <item android:id="@+id/goToDateMenuItem"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/dateMenuItem"
        app:showAsAction="always" />

    <item
        android:id="@+id/goToDessertMenuItem"
        android:title="@string/dessertMenuItem"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/goToKeyboardMenuItem"
        android:title="@string/textMenuItem"
        android:icon="@drawable/ic_action_forward"
        app:showAsAction="ifRoom" />

</menu>