<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:minHeight="20dp">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectActivityLabel"
            android:layout_gravity="center_horizontal" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/spinner"
            android:background="#ffcdffff"
            android:gravity="center_horizontal"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterTextLabel"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffbdffba"
            android:editable="true"
            android:id="@+id/mainEditText"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <fragment
        android:name="com.mycompany.uisampler.MyListFragment"
        android:id="@+id/main_activity_listfrag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:layout="@layout/simple_list_item_activated_1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_gravity="center_horizontal"
        android:text="@string/goButtonLabel"
        android:onClick="launchActivity"
        android:id="@+id/go"
        android:background="#ffffcfe5" />

</LinearLayout>
